--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.application.name=Social flashcards
 # mongodb
 spring.data.mongodb.uri=mongodb://localhost:27017/social-flashcards
 
-# swagger http://localhost:8080/swagger-ui.html
+# swagger
 springdoc.api-docs.path=/api-docs
