frontendUrl as config, updated populateDb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.data.mongodb.uri=mongodb://localhost:27017/social-flashcards
 
 # swagger
 springdoc.api-docs.path=/api-docs
+
+# config
+config.frontendUrl=http://localhost:3000
