Security implementation (JWT)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 # https://stackoverflow.com/questions/62459836/exception-message-not-included-in-response-when-throwing-responsestatusexception
 server.error.include-message=always
 spring.application.name=Social flashcards
+server.port=8080
 
 # mongodb
 spring.data.mongodb.uri=mongodb://localhost:27017/social-flashcards
