--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!--  SECURITY   -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.11.0</version>
+        </dependency>
+
+
         <!-- Tests -->
 
 <!--        <dependency>-->
