--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.4.8</version>
         </dependency>
+
         <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
@@ -53,7 +54,12 @@
             <scope>test</scope>
         </dependency>
 
-        <!--  SECURITY   -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.0-jre</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -65,15 +71,6 @@
             <version>3.11.0</version>
         </dependency>
 
-
-        <!-- Tests -->
-
-<!--        <dependency>-->
-<!--            <groupId>junit</groupId>-->
-<!--            <artifactId>junit</artifactId>-->
-<!--            <version>4.13.1</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
     </dependencies>
 
     <build>
